styles the kanas key

--- a/src/app/components/key/key.component.html
+++ b/src/app/components/key/key.component.html
@@ -1,4 +1,9 @@
 <ul>
+  <li class="header">
+    <span class="romanji">Romanji</span>
+    <span class="hiragana">Hiragana</span>
+    <span class="katakana">Katakana</span>
+  </li>
   <li *ngFor="let k of kanas">
     <span class="romanji">{{k.romanji}}</span>
     <span class="hiragana">{{k.hiragana}}</span>
