--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<div style="text-align:center">
-  <h1>
-    Kanas
-  </h1>
+<div class='nav'>
+  <nav>
+    <a routerLink="/quiz" routerLinkActive="active">Quiz</a>
+    <h1> Kanas </h1>
+    <a routerLink="/key" routerLinkActive="active">Key</a>
+  </nav>
 </div>
 <router-outlet></router-outlet>
